IDEA-268850 [merge-android-42] compilation: `java.nio` is preferred over `java.io`
GitOrigin-RevId: 1d262c9c454af1ff6cae7ca046a379b709a111cc